--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col m12">
+                <div class="col l12">
                     <h1>Hello World!</h1>
                     <p>You can find the rest api on the endpoint /api.</p>
                     <a href="/templates/addresses.html">
