--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="../css/app.css" media="screen,projection" />
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Info Page</title>
@@ -16,7 +17,7 @@
                 <div class="col l12">
                     <h1>Hello World!</h1>
                     <p>You can find the rest api on the endpoint /api.</p>
-                    <a href="/templates/addresses.html">
+                    <a href="/templates/phonesTable.html">
                         <button class="btn btn-large blue-grey">Check Address Table</button>
                     </a>
                 </div>
