--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,15 @@
                     <h1>Hello World!</h1>
                     <p>You can find the rest api on the endpoint /api.</p>
                     <a href="/templates/phonesTable.html">
-                        <button class="btn btn-large blue-grey">Check Address Table</button>
+                        <button class="btn btn-large blue-grey">Check Table</button>
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col l12">
+                    <p>This is were you can find our documentation</p>
+                    <a href="/templates/documentation.html">
+                        <button class="btn btn-large blue-grey">Documentation</button>
                     </a>
                 </div>
             </div>
