--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,24 +33,24 @@
             </div>
         </div>
 
-        <div class="footer-copyright">
-            <div class="row grey darken-1 white-text">
-                <div id="bottomContainer" class="col m3 pad-top-20 pad-bottom-20">
+        <div id="footer">
+            <div class="row grey darken-1 white-text no-margin-bottom">
+                <div class="col m2">
                     <p class="center">All Rights Reserved</p>
                 </div>
-                <div class="col m6 pad-top-20 pad-bottom-20">
+                <div class="col m6">
                     <p>
-                        <div id="authors">Viktor Kim Christiansen, Jonas Schelde, Christopher Poul Rosendorf, William Pfaffe</div>
+                    <div id="authors">Viktor Kim Christiansen, Jonas Schelde, Christopher Poul Rosendorf, William Pfaffe</div>
                     </p>
                 </div>
-                <div class="col m1 pad-top-20 pad-bottom-20">
+                <div class="col m1">
                     <p>
-                        <div id="class">COS</div>
+                    <div id="class">COS</div>
                     </p>
                 </div>
-                <div class="col m2 pad-top-20 pad-bottom-20">
+                <div class="col m3">
                     <p>
-                        <div id="group">Group number 6</div>
+                    <div id="group">Group number 6</div>
                     </p>
                 </div>
             </div>
