--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,9 @@
         <link type="text/css" rel="stylesheet" href="../css/app.css" media="screen,projection" />
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="icon"
+              type="image/png"
+              href="/static/images/favicon.png" />
         <title>Info Page</title>
     </head>
     <body>
