--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="/static/images/favicon.png" />
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
@@ -9,9 +10,7 @@
         <link type="text/css" rel="stylesheet" href="../css/app.css" media="screen,projection" />
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="icon"
-              type="image/png"
-              href="/static/images/favicon.png" />
+
         <title>Info Page</title>
     </head>
     <body>
@@ -21,8 +20,8 @@
                 <div class="col l12">
                     <h1>Hello World!</h1>
                     <p>You can find the rest api on the endpoint /api.</p>
-                    <a href="/templates/phonesTable.html">
-                        <button class="btn btn-large blue-grey">Check Table</button>
+                    <a href="/templates/search.html">
+                        <button class="btn btn-large blue-grey">Search yellow pages</button>
                     </a>
                 </div>
             </div>
