--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,16 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="icon" href="/static/images/favicon.png" />
+        <link rel="icon" href="static/images/favicon.png" />
         <!--Import Google Icon Font-->
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="../css/app.css" media="screen,projection" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+        <link type="text/css" rel="stylesheet" href="css/app.css" media="screen,projection" />
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
         <title>Info Page</title>
+
     </head>
     <body>
 
@@ -20,7 +20,7 @@
                 <div class="col l12">
                     <h1>Hello World!</h1>
                     <p>You can find the rest api on the endpoint /api.</p>
-                    <a href="yellowpages/templates/search.html">
+                    <a href="/yellowpages/templates/search.html">
                         <button class="btn btn-large blue-grey">Search yellow pages</button>
                     </a>
                 </div>
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="col l12">
                     <p>This is were you can find our documentation</p>
-                    <a href="yellowpages/templates/documentation.html">
+                    <a href="/yellowpages/templates/documentation.html">
                         <button class="btn btn-large blue-grey">Documentation</button>
                     </a>
                 </div>
@@ -60,7 +60,8 @@
 
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
     </body>
 </html>
